fixed spacing on reviews

--- a/src/pages/review/ReviewPage.css
+++ b/src/pages/review/ReviewPage.css
@@ -24,6 +24,7 @@ h3 {
 
 .review {
   margin-top: 2.0em;
+  margin-bottom: 0.0em;
   padding: 2.0em;
   color: black;
   background-color: #90C2D2;
